<resources>
    <string name="app_name">DAM</string>
    <string name="Titlu"> Adauga Masina</string>
    <string name="marca"> Marca: </string>
    <string name="anul"> An producere: </string>
    <string name="speed"> Viteza maxima: </string>
    <string name="tipConsumabil"> Tip consumabil: </string>
    <string name="electrica"> Este electrica? </string>
    <string name="hint"> Adauga Marca... </string>
    <string name="hint_An"> Introduceti Anul de Producere ...</string>
    <string name="hint_speed"> Introduceti viteza maxima a vehicului... </string>
    <string-array name="consumabil">
        <item name="diesel"> Diesel </item>
        <item name="benzina"> Benzina </item>
        <item name="gas"> Gas </item>
    </string-array>
    <string name="radio_da"> Da </string>
    <string name="radio_nu"> Nu </string>
    <string name="listView"> Afisare Lista Masina </string>
    <string name="adaugaMasina"> Adauga Masina </string>
    <string name="MasinaElectria">Masina Electrica/Hibrid</string>
    <string name="AdaugaOras"> Introduceti orasul: </string>
    <string name="zile"> Numarul de zile:</string>
    <string-array name="zile">
        <item name="z1"> 1 </item>
        <item name="z5"> 5 </item>

    </string-array>

    <string name="getTemp"> Descarca Vremea </string>
    <string name="pozeMasini"> Afisare poze masini</string>
    <string name="AfiseazaPreference"> Afiseaza lista de preferinte</string>
</resources>